# Assignment-Gravity-Sim

./: Assignment-Gravity-Sim.wasm  Cargo.toml  README.md  cargo.toml  index.html
.github/workflows/: ci.yml  deploy.yml  rust_run.yml
src/: main.rs
