[package]
name = "Assignment-Gravity-Sim"
readme = "README.md"
edition = "2024"
[dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
imp = "0.1.0"
num-traits = "0.2.19"
rand = "0.8.5"
macroquad = "0.4.14"
[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
